--- a/make.in
+++ b/make.in
@@ -1,9 +1,9 @@
 # DO NOT MODIFY THIS FILE. Please edit the appropriate arch file instead
 # Sane defaults for compiling on a system that 
 # has all the libraries installed
-LDFLAGS=-llapack -lblas -lfftw3
+LDFLAGS=-llapack -lblas -lfftw3 -lboost_regex
 CXX=g++
-CXXFLAGS=-O3 -ftracer -g  -DTB_FFTAC
+CXXFLAGS=-O3 -ftracer -g  -DTB_FFTAC -D__USEREGEX=1
 
 REL=../..
 ifneq ($(ARCH),)
